# gfmodules-nationale-verwijsindex-gateway-verifier

./: .dockerignore  Makefile  README.md  app.conf.example  docker-compose.yml  publiccode.yml  pyproject.toml  sonar-project.properties
app/: application.py  config.py  container.py  utils.py
app/db/models/: oin.py
app/db/repository/: healthcare_provider.py
app/logging/: events.py  formatter.py
app/models/: auth_headers.py
app/routers/: default.py  health.py  healthcare_provider.py  proxy.py  validator.py
app/services/: ca.py  healthcare_provider.py  http_service.py  jwt.py
docker/: Dockerfile  init.sh
docs/: kong.md
tests/: conftest.py
tests/db/models/: test_oin.py
tests/db/repository/: test_heatlhcare_provider.py
tests/logging/: test_config_builder.py  test_stream_routing.py
tests/routers/: test_proxy.py  test_validate.py  test_validate_events.py
tests/services/: test_healthcare_provider.py  test_http.py
tools/: generate_test_certs.sh
