[tool.poetry]
name = "gfmodules-nationale-verwijsindex-gateway-verifier"
version = "0.1.0"
description = ""
license = "EUPL-1.2"
authors = ["Ministerie van Volksgezondheid, Welzijn en Sport"]
repository = "https://github.com/minvws/gfmodules-nationale-verwijsindex-gateway-verifier"
readme = "README.md"
packages = [{ include = "app" }]
include = [{ path = "version.json" }]
exclude = ["app/debug"]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "0.50.2"
fastapi = ">=0.135,<0.140"
pydantic-settings = "^2.13.0"
inject = "^5.3.0"
opentelemetry-sdk = "^1.39.1"
opentelemetry-exporter-otlp-proto-grpc = "^1.39.1"
opentelemetry-instrumentation = "^0.60b1"
opentelemetry-instrumentation-fastapi = "^0.60b1"
opentelemetry-instrumentation-requests = "^0.60b1"
requests = "^2.32.5"
statsd = "^4.0.1"
pyopenssl = "^26.0.0"
jwcrypto = "^1.5.7"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"
pytest-cov = "^7.0.0"
pytest-mock = "^3.15.0"
ruff = "0.15.20"
codespell = "^2.4.1"
pip-audit = "^2.10.0"
httpx = "^0.28.1"
mypy = ">=1.19.1,<3.0.0"
types-requests = "^2.33.0.20260518"

[tool.poetry.group.debug.dependencies]
debugpy = "^1.8.20"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
cache-dir = "~/.cache/ruff"
include = ["pyproject.toml", "app/*.py", "tests/*.py"]
line-length = 120

[tool.mypy]
files = "app,tests"
python_version = "3.11"
strict = true
cache_dir = "~/.cache/mypy"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"

# Since this are our tests, we don't need "-> None" annotations everywhere
disallow_untyped_defs = false

[tool.pytest.ini_options]
cache_dir = "~/.cache/pytest"
testpaths = ["tests"]
